--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'jp.wasabeef:glide-transformations:2.0.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'fm.jiecao:jiecaovideoplayer:4.6.3'
 }
