--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="mvpplayer.itheima.com.mvplayer">
+
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
@@ -9,8 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AnimationActivity">
 
-        <activity android:name=".activity.SplashActivity"
-        android:theme="@style/AppTheme.FullScreen"
+        <activity
+            android:name=".activity.SplashActivity"
+            android:theme="@style/AppTheme.FullScreen"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -21,6 +23,11 @@
         <activity android:name=".activity.MainActivity"/>
         <activity android:name=".activity.SettingsActivity"/>
         <activity android:name=".activity.AboutActivity"/>
+        <activity
+            android:name=".activity.MvPlayerActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait"
+            />
     </application>
 
 </manifest>
